<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/P2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/P2"
                android:background="@color/window_m20"
                android:gravity="end"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/color"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/B3"
                    android:layout_margin="@dimen/P3"
                    android:layout_weight=".8"
                    android:background="@color/colorAccentDark"
                    android:backgroundTintMode="src_over"
                    android:foreground="@drawable/gradient"
                    android:foregroundTintMode="multiply"
                    android:gravity="end"
                    android:orientation="vertical">


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">

                    <ImageView
                        android:id="@+id/add_to_custom"
                        android:layout_width="@dimen/B1"
                        android:layout_height="@dimen/B1"
                        android:layout_marginStart="@dimen/P2"
                        android:layout_marginEnd="@dimen/P2"
                        android:background="@color/transparent"
                        android:contentDescription="@string/app_name"
                        android:foreground="@drawable/ic_add"
                        android:foregroundTint="@color/buttonText"
                        android:onClick="addToCustom"
                        android:tint="@color/colorPrimary" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/P2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="fill_horizontal|end"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/BaseTheme.textDefault"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/act_add_new_color_r" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/m_redSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:paddingTop="@dimen/P2"
                    android:paddingBottom="@dimen/P2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/BaseTheme.textDefault"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/act_add_new_color_g" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/m_greenSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:paddingTop="@dimen/P2"
                    android:paddingBottom="@dimen/P2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/BaseTheme.textDefault"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/act_add_new_color_b" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/m_blueSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:paddingTop="@dimen/P2"
                    android:paddingBottom="@dimen/P2" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/P2"
        android:layout_weight=".8"
        android:baselineAligned="false"
        android:gravity="center_horizontal|center_vertical">

        <GridView
            android:id="@+id/storage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/window_d2"
            android:isScrollContainer="true"
            android:numColumns="6"
            android:stretchMode="columnWidth" />


    </LinearLayout>

    <include layout="@layout/ok_cancel" />


</LinearLayout>